# c-exercises

./: README.md
6.087/assn04/: Makefile  main.c
6.087/assn04/src/: linkedList.c  linkedList.h  treeNode.c  treeNode.h
c11/ex5/: .gitignore  Makefile  README.md  lab5_array.c  lab5_pointer.c
c11/ex6/: Dockerfile  Makefile  README.md  quicksorter.c
c11/ex6/src/: linked_list.c  linked_list.h  quicksortArray.c
c11/ex7/: CMakeLists.txt  README.md  hash_table.c  main.c  test2.in  test_hash.c
c11/ex8/: CMakeLists.txt  bci.c  run_test
c11/ex8/tests/: factorial.bca  factorial.bcm
c11/linkedList/: CMakeLists.txt  Makefile  main.c
c11/linkedList/src/: linked.c  linked.h
c11/pointersPlay/: Makefile  main.c
cl.cam.ac.uk-ProgC/doubelLinkedlist/: CMakeLists.txt  Makefile  main.c
cl.cam.ac.uk-ProgC/doubelLinkedlist/src/: linkedList.c  linkedList.h
cl.cam.ac.uk-ProgC/lab3/: CMakeLists.txt  Makefile  lab3.c  list.c  list.h
cl.cam.ac.uk-ProgC/lab4/: CMakeLists.txt  Makefile  lab4.c  memcheck.c  tree.c  tree.h
cl.cam.ac.uk-ProgC/lab5/: CMakeLists.txt  Makefile  expr.c  expr.h  lab5.c  memcheck.c  parse.c  parse.h
cl.cam.ac.uk-ProgC/lab6/: CMakeLists.txt  Makefile  graph.c  graph.h  lab6.c
sdl/sdl2/: Makefile
sdl/sdl2 testing/sdl2_testing/sdl_seminar/: Makefile  hello2_window.c
sdl/sdl2/Lesson0/src/: main.c
